# recipes-app

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Procfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pom.xml
.github/workflows/: deploy.yaml
backend/: .gitignore  Dockerfile  pom.xml
backend/src/main/resources/: application-dev.yaml  application.yaml  keystore.jks
backend/src/main/resources/public/: index.html
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pom.xml  tsconfig.json  vite.config.js  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: Button.vue  Button_Icon.vue  Categories.vue  CreateRecipeForm.vue  Footer.vue  HelloTs.vue  ImageUploadPreview.vue  IngredientFormInput.vue  LoginForm.vue  Navbar.vue  RecipeCard-v2.vue  RecipeCard.vue  SearchChip.vue  SearchInput.vue  SearchInputIngredients.vue  SearchInputRecipes.vue
frontend/src/router/: index.js
frontend/src/services/: api.d.ts  api.js
frontend/src/store/: index.js
frontend/src/stores/: authStore.js  index.js  recipeStore.js
frontend/src/views/: 404.vue  CreateRecipe.vue  Impressum.vue  Index.vue  Login.vue  MealPlans.vue  Profile.vue  RecipePdp.vue  RecipesPlp.vue
ml-service/: config.py  ingest.py  main.py  models.py  pyproject.toml  retrieve.py
scripts/: seed.js
src/main/java/com/simongig/recipesapp/: RecipesAppApplication.java
src/main/resources/: application.properties  application.yaml
(+55 files in other folders)
