[project]
name = "ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.136.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-mongodb>=0.11.0",
    "langchain-text-splitters>=1.1.2",
    "motor>=3.7.1",
    "pip>=26.1.1",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
]

[tool.fastapi]
entrypoint = "main:app"

[tool.uv]
keyring-provider = "disabled"
